
add_executable(json_spirit_integration_tests "main.cpp" "parsetests.cpp")
target_link_libraries(json_spirit_integration_tests json_spirit)
add_test(json_spirit_integration_tests json_spirit_integration_tests)

custom_enable_cxx14(json_spirit_integration_tests)
custom_enable_warnings(json_spirit_integration_tests)
